Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -10,3 +10,7 @@ steps:
     ./mvnw clean package -DskipTests
   displayName: "Maven build"
 
+- script: |
+    docker version
+    docker build -t petclinic:local .
+  displayName: "Docker build"
